# px4-mpc

./: README.md  pyproject.toml
config/: quadrotor_tuning.yaml
launch/: mpc_quadrotor.launch.py
nodes/: astrobee_demo.py  quadcopter_demo.py
px4_mpc/: mpc_quadrotor.py  setup.py
px4_mpc/controllers/: setpoint_mpc.py
px4_mpc/models/: multirotor_rate_model.py  quadrotor.py
px4_mpc/px4_mpc/: mpc_quadrotor.py  mpc_spacecraft.py  mpc_vehicle_manager.py  rviz_pos_marker.py  test_solenoid_valve_connection.py
px4_mpc/px4_mpc/controllers/: mpc_interface.py  multirotor_rate_mpc.py  spacecraft_casadi_rate_mpc.py  spacecraft_direct_allocation_mpc.py  spacecraft_offset_free_wrench_mpc.py  spacecraft_rate_mpc.py  spacecraft_wrench_lqr.py  spacecraft_wrench_mpc.py
px4_mpc/px4_mpc/controllers/acados/: spacecraft_rate_mpc.py
px4_mpc/px4_mpc/controllers/casadi/: spacecraft_rate_mpc.py  spacecraft_wrench_mpc.py
px4_mpc/px4_mpc/controllers/casadi/collision_avoidance/: cbf.py
px4_mpc/px4_mpc/controllers/casadi/filters/: safety_filters.py
px4_mpc/px4_mpc/launch/: mpc_spacecraft_launch.py
px4_mpc/px4_mpc/models/: multirotor_rate_model.py  spacecraft_direct_allocation_model.py  spacecraft_rate_model.py  spacecraft_wrench_6dof_model.py  spacecraft_wrench_model.py
px4_mpc/px4_mpc/test/: test_setpoints.py
px4_mpc/px4_mpc/utils/: rotation_utils.py  rotations.py
src/px4_mpc/controllers/: mpc.py  setpoint_mpc.py  tracking_mpc.py
src/px4_mpc/models/: astrobee.py  quadrotor.py
src/px4_mpc/simulation/: basic_environment.py
