[tool.poetry]
name = "px4_mpc"
version = "0.1.0"
description = "A PX4 sample interface for MPC controllers."
authors = ["Jaeyoung Lim <jaeyoung.lim@ethz-asl.ch>, Pedro Roque <padr@kth.se>"]

[tool.poetry.dependencies]
python = "^3.8"
casadi = "3.5.5"
matplotlib = "^3.5.1"
pyyaml = "^5.3.1"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
